app/assets/stylesheets/sass/_layout.scss
/* ... */
#side-bar {
	padding: 2.5%;

	.preview-list {

		li {
			margin: auto;
			float: none;
			display: block;
		}
	}

	h5 {
		text-align: center;
	}

	form {
		text-align: center;
		padding: 2em 0;
	}

	@include breakpoint(medium) {
		+ #content {
			padding-top: 0;
		}
	}

	@include breakpoint(large) {
		float: left;
		clear: left;
		width: 25%;
		font-size: 1vw;

		h5 {
			text-align: left;
			font-size: 1.25em;
		}

		+ #content {
			padding-top: 4em;
		}

		.conferences.page-style-article & {
			min-height: 40em;
			min-height: 50vh;
		}
	}
}

main {
	min-height: 100%;
	//overflow: auto;
	background-color: $white;

	@include breakpoint(large) {
		overflow: auto;

		footer {
			@include clearfix;
		}
	}
}

#content {
	padding: 1em;
	overflow: auto;
	//background-color: lighten($color-5, 20);
	background-color: $white;

	.organizations & {
		//background-color: lighten(desaturate($organization-color, 25), 50);
		min-height: 100vh;
	}

	.conferences & {
		//background-color: #FFF;
		//background-color: lighten(desaturate($conference-color, 25), 42.5);
		min-height: 100vh;
	}

	@include breakpoint(medium) {
		padding: 4em;
		clear: right;

		.organizations.page-style-article & {
			min-height: 25em;
			min-height: 50vh;
		}
	}
}

#banner {
	position: relative;
	background-size: cover;
	background-position: 25% 66.6667%;
	//padding-top: 4em;
	color: $white;
	overflow: visible;
	background-color: $black;

	h1, h2 {
		color: inherit;

		a {
			color: inherit;
		}
	}

	.row {
		height: 100%;
		z-index: 2;
		position: relative;

		//.align-bottom {
		//	height: 50%;
		//}
	}

	//.align-bottom > div {
		//margin-bottom: 3em;
	//}

	.button {
		width: 75%;
		color: inherit;
		border-color: inherit;
		background-color: rgba(darken($primary-color, 0), 0.33);
		padding: 0.75em 1em;
		white-space: nowrap;
		@include text-shadow(none);

		&:hover {
			background-color: $primary-color;
			color: $white;
			border-color: transparent;
		}

		&#register-now {
			background-color: rgba(darken($warning-color, 0), 0.33);
			margin-top: 0;

			&:hover {
				background-color: $warning-color;
			}
		}
	}

	.organizations & {
		background-color: $organization-color;
	}

	.has-banner-image & {
		padding-bottom: 4em;
		background-color: rgba($conference-color, 0.33);
		background-blend-mode: overlay;
		@include text-shadow(0 0 0.5em $black);

		.no-blend-modes & {
			&:before {
				content: '';
				display: block;
				position: absolute;
				background-color: inherit;
				top: 0;
				left: 0;
				width: 100%;
				height: 100%;
				z-index: 1;
			}
		}

		&:after {
			content: '';
			display: block;
			position: absolute;
			//background-color: inherit;
			top: 0;
			left: 0;
			width: 100%;
			height: 100%;
			z-index: 1;
			@include background-image(linear-gradient(top, rgba(0,0,0,0) 50%, darken($conference-color, 25) 100%));
			mix-blend-mode: multiply;
		}
	}

	.has-banner-image.organizations & {
		background-color: rgba($organization-color, 0.33);

		&:after {
			@include background-image(linear-gradient(top, rgba(0,0,0,0) 50%, darken($organization-color, 25) 100%));
		}
	}

	h2 {
		color: $color-4;
		margin-bottom: 0.25em;

		+ em {
			display: block;
			color: $color-5;
			font-weight: 600;
			margin-bottom: 1em;
		}
	}

	.organizations.page-style-article & {
		h1 {
			line-height: 0.9em;
			margin-bottom: 0.5em;
		}

		figure {
			text-align: center;
		}
	}

	.conferences.page-style-article & {
		.columns.banner {
			//height: 75%;
			padding-bottom: 1em;

			figure {
				margin: 2em 0 0;
			}
		}
	}

	.page-style-emphasize-banner &,
	.conferences & {
		figure img {
			box-shadow: 0 0 2em $black;
		}
	}

	.organizations-index &,
	.conferences-index & {
		height: 13vw;
		min-height: 0;
		background-position: center 25%;

		h1 {
			font-size: 8vw;
			margin-top: 1vw;
		}
	}

	@include breakpoint(medium) {
		padding: 7.5em 4em 1em;

		.has-banner-image & {
			min-height: 40em;
			height: 100%;
			min-height: 100vh;
		}

		.page-style-article & {
			min-height: 30em;

			.row {
				height: 100%;
			}

			h1 {
				font-size: 3.5em;
				margin-top: 0.5em;
			}

			figure {
				img {
					max-height: 75%;
				}
			}

			.portrait {
				h1 {
					margin-top: 20%;
				}

				figure img {
					//width: 100%;
				}
			}

			.landscape {
				.columns {
					max-height: 70%;
				}
			}
		}

		.page-style-article.small-banner & {
			min-height: 10em;
		}

		.page-style-list & {
			min-height: 10em;
			height: 30em;
			height: 30vw;

			h1 {
				font-size: 6em;
				font-size: 6vw;
			}
		}
		
		.row .align-bottom.buttons {
			height: 14em;
		}
	}

	@include breakpoint(large) {
		border-bottom-left-radius: 2.5em;
		padding-top: 2em;
		width: 75%;
		float: right;

		.has-banner-image & {
			padding-top: 0;
		}

		.no-content & {
			border-radius: 0;
		}

		&:before,
		&:after {
			border-bottom-left-radius: inherit;
		}

		.button {
			//margin-top: 20%;
		}

		.page-style-list & {
			height: 15em;
			height: 15vw;

			h1 {
				font-size: 3.75vw;
				margin-top: 6vw;
			}
		}

		.page-style-article & {
			height: 50%;
			height: 50vh;
		}

		.row .align-bottom {
			height: 50%;
		}

		.conferences.page-style-article & {
			height: auto;
			padding-bottom: 2em;

			.align-bottom > div {
				margin-bottom: 0;
			}

			.columns.banner {
				//height: 75%;
				padding-bottom: 0;
			}

			.row .align-bottom {
				height: auto;

				&.buttons {
					height: 10em;
				}
			}
		}
	}
}

.align-bottom {
	display: -webkit-flexbox;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-align: flex-end;
	-ms-flex-align: flex-end;
	-webkit-align-items: flex-end;
	align-items: flex-end;

	> div {
		width: 100%;
	}
}

.centered {
	text-align: center;
}

#footnotes_debug {
	display: none;
}
/* ... */

